--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
             </ul>
             <button class="btn">Subscribe <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></button>
         </nav>
+        <hr>
+        <section class="banner">
+            <div class="banner-content">
+                <div class="circle">
+                    <img src="./B13-A02-TechWave/assets/hero-circle.png" class="banner-circle">
+                    <img src="./B13-A02-TechWave/assets/microphone.png" alt="" class="banner-microphone">   
+                    <button class="new-btn">NEW</button>
+                </div>
+                <h2 class="banner-header text-color">TechWave</h2>
+                <p class="text-color paragraph">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div>
+                    <button class="btn btn-spotify"><i class="fa-brands fa-spotify"></i> Listen on
+                        Spotify</button>
+                    <button class="subscribe-btn"><i class="fa-regular fa-envelope"></i> Subscribe</button>
+                </div>
+            </div>
+        </section>
      </header>
 </body>
 </html>
