--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body class="inter-font">
     <!-- header section -->
      <header>
+        <!-- navigation -->
         <nav class="flex">
             <h2 class="nav-header text-color">Tech<span class="wave">Wave</h2>
             <ul class="flex">
@@ -23,6 +24,7 @@
             <button class="btn">Subscribe <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></button>
         </nav>
         <hr>
+        <!-- banner section  -->
         <section class="banner">
             <div class="banner-content">
                 <div class="circle">
@@ -40,5 +42,43 @@
             </div>
         </section>
      </header>
+     <main>
+        <!-- about podcast section -->
+        <section class="about-podcast">
+            <section class="about-section">
+                <div class="about-content text-color">
+                    <h2 class="about-title">About The Podcast</h2>
+                    <p class="about-text">
+                        TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+                        We break down complex topics into digestible insights, explore productivity strategies that actually
+                        work,<br>and share stories of personal growth from industry leaders.
+                    </p>
+                    <p class="about-join">
+                        Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                    </p>
+                </div>
+                <hr>
+                <div class="about-cards flex text-color">
+                    <div class="card">
+                        <h3>150K+</h3>
+                        <p>MONTHLY LISTENERS</p>
+                    </div>
+                    <div class="card">
+                        <h3>200+</h3>
+                        <p>EPISODES PUBLISHED</p>
+                    </div>
+                    <div class="card">
+                        <h3>4.9★</h3>
+                        <p>AVERAGE RATING</p>
+                    </div>
+            
+                    <div class="card">
+                        <h3>50+</h3>
+                        <p>INDUSTRY EXPERTS</p>
+                    </div>
+                </div>
+            </section>            
+        </section>
+     </main>
 </body>
 </html>
