episodes section is done

--- a/index.html
+++ b/index.html
@@ -79,6 +79,80 @@
                 </div>
             </section>            
         </section>
+        <!-- choose section  -->
+        <section class="choose text-color">
+            <div class="choose-container">
+                <div class="choose-header">
+                    <h3>Why Choose TechWave</h3>
+                </div>
+                <div class="choose-layout">
+                    <div class="Audio size">
+                        <img src="./B13-A02-TechWave/assets/headphone.png">
+                        <h3>Premium Audio Quality</h3>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                    </div>
+                    <div class="Mobile size">
+                        <img src="./B13-A02-TechWave/assets/device.png">
+                        <h3>Mobile Friendly</h3>
+                        <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                    </div>
+                    <div class="Community size">
+                        <img src="./B13-A02-TechWave/assets/location.png">
+                        <h3>Global Community</h3>
+                        <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                    </div>
+                    <div class="Interviews size">
+                        <img src="./B13-A02-TechWave/assets/exclusive.png">
+                        <h3>Exclusive Interviews</h3>
+                        <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                    </div>
+                    <div class="Rewards size">
+                        <img src="./B13-A02-TechWave/assets/resource.png">
+                        <h3>Rich Resources</h3>
+                        <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- episodes and host section -->
+         <section class="episodes-host text-color">
+            <div class="episodes-container">
+                <h2>Featured Episodes</h2>
+                <div class="episodes-cards">
+                    <div class="card">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/7ARBJQn6QkM?si=PUKGFKBcFto_MXs5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h4>The Future of AI in Everyday Life</h4>
+                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                        <div class="time flex">
+                            <img src="./B13-A02-TechWave/assets/clock.png" alt="">
+                            <p>66 min</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/bdsc3Spm6Sw?si=iEaaoMj8TbkNgll0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h4>Building Better Habits for Remote Work</h4>
+                        <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                        <div class="time flex">
+                        <img src="./B13-A02-TechWave/assets/clock.png" alt="">
+                        <p>156 min</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/goK4hKZ742w?si=DjNGw7aKwrG8Qgpf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h4>Career Growth in Tech: A Roadmap</h4>
+                        <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                        <div class="time flex">
+                        <img src="./B13-A02-TechWave/assets/clock.png" alt="">
+                        <p>46 min</p>
+                        </div>
+                    </div>
+                </div>        
+            </div>
+            <div class="host-container">
+
+            </div>
+         </section>
      </main>
 </body>
 </html>
