--- a/index.html
+++ b/index.html
@@ -149,10 +149,30 @@
                     </div>
                 </div>        
             </div>
-            <div class="host-container">
-
+            <div class="host-container text-color">
+                <div class="host-header">
+                    <h2>Meet the Host</h2>
+                </div>
+                <div class="host flex">
+                    <div class="host-img">
+                        <img src="./B13-A02-TechWave/assets/host.png" alt="">
+                    </div>
+                    <div class="host-info">
+                        <h3 class="name">Alex Kumar</h3>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        <div class="social">
+                            <ul class="flex">
+                                <li><a class="flex" href=""><img src="./B13-A02-TechWave/assets/linkedin.png" alt=""></a></li>
+                                <li><a class="flex" href=""><img src="./B13-A02-TechWave/assets/x.png" alt=""></a></li>
+                                <li><a class="flex" href=""><img src="./B13-A02-TechWave/assets/instagram.png" alt=""></a></li>
+                                <li><a class="flex" href=""><img src="./B13-A02-TechWave/assets/youtube.png" alt=""></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
          </section>
+
      </main>
 </body>
 </html>
