--- a/index.html
+++ b/index.html
@@ -174,5 +174,18 @@
          </section>
 
      </main>
+
+     <footer>
+        <div class="footer-container text-color">
+            <h2 class="footer-header">Tech<span class="wave">Wave</span></h2>
+            <ul class="flex footer-social">
+                <li class="flex"><img src="./B13-A02-TechWave/assets/spotify.png" alt=""><a href="" class="style-none">Spotify</a></li>
+                <li class="flex"><img src="./B13-A02-TechWave/assets/apple-podcast.png" alt=""><a href="" class="style-none">Apple Podcasts <a></li>
+                <li class="flex"><img src="./B13-A02-TechWave/assets/youtube-podcast.png" alt=""><a href="" class="style-none">YouTube</a></li>
+                <li class="flex"><img src="./B13-A02-TechWave/assets/twitter.png" alt=""><a href="" class="style-none">Twitter</a></li>
+            </ul>
+            <p class="flex">© 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
