--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- header section -->
      <header>
         <!-- navigation -->
-        <nav class="flex">
+        <nav class="nav-container flex">
             <h2 class="nav-header text-color">Tech<span class="wave">Wave</h2>
             <ul class="flex">
                 <li><a class="text-color" href="">About</a></li>
@@ -23,6 +23,10 @@
             </ul>
             <button class="btn">Subscribe <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></button>
         </nav>
+        <span class="responsive-nav">
+            <h2 class="nav-header text-color">Tech<span class="wave">Wave</h2>
+            <img src="./B13-A02-TechWave/assets/hamburger-menu.png" alt="">
+        </span>
         <hr>
         <!-- banner section  -->
         <section class="banner">
